force-app/main/default/objects/LeadScoringRule__c/LeadScoringRule__c.object-meta.xml
<CustomObject>
    <description
    >This object tracks the lead scoring rules to help prioritize leads based on who they are and what they do.</description>
    <label>Lead Scoring Rule</label>
    <nameField>
        <label>Lead Scoring Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Scoring Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>