force-app/main/default/objects/LeadScoringRule__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description
    >In-Active rules are NOT evaluated when a lead or campaign member is saved.</description>
    <inlineHelpText
    >In-Active rules are NOT evaluated when a lead or campaign member is saved.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>