force-app/main/default/objects/LeadScoringRule__c/fields/Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Field_Label__c</fullName>
    <description
    >This contains the more readable field label of the Field name.  Note this approach doesn&apos;t solve for an org has two fields with the same label.  There&apos;s a chance the wrong field would be used.</description>
    <label>Field Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>