force-app/main/default/objects/LeadScoringRule__c/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <description>Field name used for criteria</description>
    <inlineHelpText>Field name used for criteria</inlineHelpText>
    <label>Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>