force-app/main/default/objects/LeadScoringRule__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Rule Type</label>
    <valueSet>
        <valueSetDefinition>
        <value>
            <fullName>Lead</fullName>
            <default>true</default>
            <label>Lead</label>
        </value>
        <value>
            <fullName>Campaign Member</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
    <type>Picklist</type>
</CustomField>