force-app/main/default/objects/LeadScoringRule__c/validationRules/Rule_field_operator_are_valid.validationRule-meta.xml
<ValidationRule>
    <fullName>Rule_field_operator_are_valid</fullName>
    <active>true</active>
    <description
    >Checks that the rule has a valid field &amp; operator</description>
    <errorConditionFormula
    >ISNULL(Field_Name__c)  ||Field_Name__c==&apos;&apos; || ISNULL(text(Operator__c )) || ISNULL(text(Type__c)) || ISNULL(Value__c)  || Value__c==&apos;&apos;</errorConditionFormula>
    <errorMessage
    >You must select a field, operator, and value before saving.  Blank or null values are not supported as valid values.</errorMessage>
</ValidationRule>