force-app/main/default/objects/LeadScoringRule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Active__c</columns>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Field_Label__c</columns>
    <columns>Field_Name__c</columns>
    <columns>Operator__c</columns>
    <columns>Value__c</columns>
    <columns>Score_Change__c</columns>
    <columns>Campaign__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>